--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,21 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# TypeScript build output
+dist/
+build/
+
+# VS Code settings (optional - si quieres ignorar configuraciones personales)
+.vscode/
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Data files (opcional - si no quieres versionar los datos de prueba)
+# data/*.json
