comunicacion con la DB establecida para eventros

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-# Server Configuration
 PORT=3000
 NODE_ENV=development
 
-# Data Directory (opcional, si quieres configurar rutas personalizadas)
-# DATA_DIR=./data
+# Configuración de MySQL (solo si REPOSITORY_TYPE=mysql)
+DB_HOST=localhost
+DB_USER=<USUARIO_DE_LA_BD>
+DB_PASSWORD=<CONTRASEÑA_DE_LA_BD>
+DB_NAME=manager_eventos
+DB_CONNECTION_LIMIT=10
