--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express-session": "^1.18.2",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-handlebars": "^8.0.3",
+    "express-session": "^1.18.2",
     "mysql2": "^3.16.0"
   },
   "devDependencies": {
