Los controllers y services ya no exportan clases, importan directamente las funciones. Ademas se implementa un RepositoryFactory para tener en env una variable para elegir de donde se tomará la persistencia de datos

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 PORT=3000
 NODE_ENV=development
 
-# Configuración de MySQL (solo si REPOSITORY_TYPE=mysql)
+# Tipo de repositorio: FS (File System) o SQL (MySQL)
+# FS: Usa archivos JSON en la carpeta data/
+# SQL: Usa MySQL con la configuración de abajo
+REPOSITORY_TYPE=SQL
+
+# Configuración de MySQL (solo si REPOSITORY_TYPE=SQL)
 DB_HOST=localhost
 DB_USER=<USUARIO_DE_LA_BD>
 DB_PASSWORD=<CONTRASEÑA_DE_LA_BD>
